feat: Add Dockerfile, Fix path file, add docker-compose